--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -8,7 +8,7 @@
 <body>
      <header>
         <h1>
-            About Tech Conference 2024
+            About TechCon 2024
         </h1>
         <nav>
             <ul>
@@ -21,12 +21,7 @@
      </header>
      <main>
         <article>
-            <h2>Origins of TechCon</h2>
-            <p>TechCon was founded in 2020 with the aim of bringing together technology enthusiasts from around the world.</p>
-            <img src="images/origins.jpg" alt="TechCon Origins" />
-            <h2>Evolution of TechCon</h2>
-            <p>Since its inception, TechCon has grown exponentially, attracting top speakers and thousands of attendees.</p>
-            <img src="images/evolution.jpg" alt="TechCon Evolution" />
+           <h2><strong>History</strong></h2>
         </article>
         <article>
             <h2>Mission of TechCon</h2>
@@ -34,7 +29,7 @@
             <img src="images/mission.jpg" alt="TechCon Mission" />
         </article>
         <article>
-            <h2>Notable Speakers</h2>
+            <h2>Past Speakers</h2>
             <p>Over the years, TechCon has hosted numerous influential speakers in the tech industry.</p>
             <figure>
                 <img src="images/speaker1.jpg" alt="Speaker 1" />
