--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -63,7 +63,7 @@
           <a href="register.html">Register</a> |
           <a href="contact.html">Contact</a>
         </nav>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>Copyright; 2024 TechCon. All rights reserved.</p>
       </footer>
 </body>
 </html>
